objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Activity_Miles__c</fullName>
        <description>Miles traveled during Adventure. For hiking, backpacking, cycling, river running.</description>
        <inlineHelpText>Enter the miles hiked, cycled, etc during the Adventure.</inlineHelpText>
        <label>Activity Miles</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Account_Number__c</fullName>
        <label>C&amp;P Account Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Connect_Campaign_Link__c</fullName>
        <label>C&amp;P Connect Campaign Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Connect_Campaign__c</fullName>
        <label>C&amp;P Connect Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Connect_Default_Selected_Item__c</fullName>
        <inlineHelpText>Default Selected Item testing feroz</inlineHelpText>
        <label>C&amp;P Connect Default Selected Item</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Connect_Form_Name__c</fullName>
        <label>C&amp;P Connect Form Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Last_Update__c</fullName>
        <label>C&amp;P Last Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Lift_Basis__c</fullName>
        <label>C&amp;P Lift Basis</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Lift_Campaign__c</fullName>
        <label>C&amp;P Lift Campaign</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Lift_Landing_Page__c</fullName>
        <label>C&amp;P Lift Landing Page</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Lift_Life_Span__c</fullName>
        <label>C&amp;P Lift Life Span</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Lift_Rate__c</fullName>
        <label>C&amp;P Lift Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Patron_Rank_Max__c</fullName>
        <label>C&amp;P Patron Rank Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Patron_Rank_Min__c</fullName>
        <label>C&amp;P Patron Rank Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Payment_Maximum_Start_Amount__c</fullName>
        <label>C&amp;P Payment Maximum Start Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Payment_Maximum__c</fullName>
        <label>C&amp;P Payment Maximum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Payment_Minimum__c</fullName>
        <label>C&amp;P Payment Minimum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Reservation_Fee__c</fullName>
        <description>Fee paid to contract or reserve venue for Campaign</description>
        <inlineHelpText>Enter the total amount paid for contracting or reserving the venue for the Activity</inlineHelpText>
        <label>Contract/Reservation Fee</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Email_Message__c</fullName>
        <description>A message that will be included in emails to campaign members to customize the emails to the campaign.</description>
        <label>Email Message</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Fee_for_Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The fee for the activity type of a campaign of record type Adventure</description>
        <inlineHelpText>The fee for the activity type of a campaign of record type Adventure</inlineHelpText>
        <label>Fee for Activity</label>
        <referenceTo>Fee__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fee_paid_by_DA__c</fullName>
        <description>Amount paid by DA to provide this Campaign to members</description>
        <inlineHelpText>Enter the total paid in fees for this Activity</inlineHelpText>
        <label>Fee paid by DA</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Number_of_Volunteers__c</fullName>
        <inlineHelpText>The total number of volunteers whose Hours Status = Completed or Confirmed.</inlineHelpText>
        <label>Number of Volunteers</label>
        <summarizedField>GW_Volunteers__Volunteer_Job__c.GW_Volunteers__Number_of_Volunteers__c</summarizedField>
        <summaryForeignKey>GW_Volunteers__Volunteer_Job__c.GW_Volunteers__Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Completed_Hours__c</fullName>
        <inlineHelpText>Total number of hours that are completed.  Hours with other status values are not included.</inlineHelpText>
        <label>Volunteer Completed Hours</label>
        <summarizedField>GW_Volunteers__Volunteer_Job__c.GW_Volunteers__Number_of_Completed_Hours__c</summarizedField>
        <summaryForeignKey>GW_Volunteers__Volunteer_Job__c.GW_Volunteers__Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Jobs__c</fullName>
        <label>Volunteer Jobs</label>
        <summaryForeignKey>GW_Volunteers__Volunteer_Job__c.GW_Volunteers__Campaign__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Shifts__c</fullName>
        <label>Volunteer Shifts</label>
        <summarizedField>GW_Volunteers__Volunteer_Job__c.GW_Volunteers__Number_of_Shifts__c</summarizedField>
        <summaryForeignKey>GW_Volunteers__Volunteer_Job__c.GW_Volunteers__Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Website_Time_Zone__c</fullName>
        <inlineHelpText>The Time Zone to use when displaying Shift times on Sites pages.  You only need to set this if you want to override the Time Zone set on the Site Guest User profile.</inlineHelpText>
        <label>Volunteer Website Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pacific/Kiritimati</fullName>
                </value>
                <value>
                    <fullName>Pacific/Chatham</fullName>
                </value>
                <value>
                    <fullName>Pacific/Auckland</fullName>
                </value>
                <value>
                    <fullName>Pacific/Enderbury</fullName>
                </value>
                <value>
                    <fullName>Pacific/Tongatapu</fullName>
                </value>
                <value>
                    <fullName>Asia/Kamchatka</fullName>
                </value>
                <value>
                    <fullName>Pacific/Fiji</fullName>
                </value>
                <value>
                    <fullName>Pacific/Norfolk</fullName>
                </value>
                <value>
                    <fullName>Australia/Lord_Howe</fullName>
                </value>
                <value>
                    <fullName>Australia/Sydney</fullName>
                </value>
                <value>
                    <fullName>Pacific/Guadalcanal</fullName>
                </value>
                <value>
                    <fullName>Australia/Adelaide</fullName>
                </value>
                <value>
                    <fullName>Australia/Brisbane</fullName>
                </value>
                <value>
                    <fullName>Australia/Darwin</fullName>
                </value>
                <value>
                    <fullName>Asia/Seoul</fullName>
                </value>
                <value>
                    <fullName>Asia/Tokyo</fullName>
                </value>
                <value>
                    <fullName>Asia/Hong_Kong</fullName>
                </value>
                <value>
                    <fullName>Asia/Kuala_Lumpur</fullName>
                </value>
                <value>
                    <fullName>Asia/Manila</fullName>
                </value>
                <value>
                    <fullName>Asia/Shanghai</fullName>
                </value>
                <value>
                    <fullName>Asia/Singapore</fullName>
                </value>
                <value>
                    <fullName>Asia/Taipei</fullName>
                </value>
                <value>
                    <fullName>Australia/Perth</fullName>
                </value>
                <value>
                    <fullName>Asia/Bangkok</fullName>
                </value>
                <value>
                    <fullName>Asia/Jakarta</fullName>
                </value>
                <value>
                    <fullName>Asia/Saigon</fullName>
                </value>
                <value>
                    <fullName>Asia/Rangoon</fullName>
                </value>
                <value>
                    <fullName>Asia/Dacca</fullName>
                </value>
                <value>
                    <fullName>Asia/Yekaterinburg</fullName>
                </value>
                <value>
                    <fullName>Asia/Katmandu</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteers_Still_Needed__c</fullName>
        <label>Volunteers Still Needed</label>
        <summarizedField>GW_Volunteers__Volunteer_Job__c.GW_Volunteers__Number_of_Volunteers_Still_Needed__c</summarizedField>
        <summaryForeignKey>GW_Volunteers__Volunteer_Job__c.GW_Volunteers__Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Google_Calendar_Link__c</fullName>
        <description>Link to the Google Calendar for contacts to add the event to their calendar.</description>
        <inlineHelpText>This link is generated in the Google Calendar app. For each event there is a different link.</inlineHelpText>
        <label>Google Calendar Link</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Head_Count__c</fullName>
        <description>How many people are signed up or attended this campaign</description>
        <label>Head Count</label>
        <summarizedField>CampaignMember.Party_of__c</summarizedField>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Incident_Reports__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of Incident Reports filed for this campaign - make sure to upload the incident reports to the files attached to this record.</description>
        <inlineHelpText>Number of Incident Reports filed for this campaign - make sure to upload the incident reports to the files attached to this record.</inlineHelpText>
        <label># Incident Reports</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Participant_Days__c</fullName>
        <description>The number of Participant Days in this Adventure (this is the days in the adventure multiplied by the total number of people that experienced the adventure - participants, friends and family, caregivers, invitees, volunteers and staff).</description>
        <inlineHelpText>The number of Participant Days in this Adventure (this is the days in the adventure multiplied by the total number of people that experienced the adventure - participants, friends and family, caregivers, invitees, volunteers and staff).</inlineHelpText>
        <label>Participant Days</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Public_Event__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If this field is check then this campaign will be included in the sign-up page for the public to sign-up. If it is unchecked, means the event is private and only office personnel can sign up contacts.</description>
        <inlineHelpText>Uncheck this field if you want this event to be private and not show up in the selection in the sign-up public page.</inlineHelpText>
        <label>Public Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The related campaign for this record Adventure-Volunteer campaign relationship.</description>
        <label>Related Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Related Campaign</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salary_Wages__c</fullName>
        <description>Amount spent on Salary and Wages for this Campaign</description>
        <inlineHelpText>Enter the total amount paid to staff for this activity.</inlineHelpText>
        <label>Salary and Wages</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Supplies_Cost__c</fullName>
        <description>Total paid for supplies for this Campaign</description>
        <inlineHelpText>Enter the total amount paid for supplies for this campaign</inlineHelpText>
        <label>Supplies Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transportation_Gas__c</fullName>
        <description>Cost of gas for transportation</description>
        <inlineHelpText>Enter the total cost of fuel for transportation</inlineHelpText>
        <label>Transportation - Gas</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transportation_Rental__c</fullName>
        <description>Amount paid for transportation rental for this Campaign</description>
        <inlineHelpText>Enter the total amount paid for rental of transportation</inlineHelpText>
        <label>Transportation Rental</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>Adventure_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.Adventure</value>
        </filters>
        <label>Adventure Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Adventure_Campaigns_2017</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.Adventure</value>
        </filters>
        <filters>
            <field>CAMPAIGN.START_DATE</field>
            <operation>greaterThan</operation>
            <value>1/1/2018</value>
        </filters>
        <label>Adventure Campaigns 2018</label>
    </listViews>
    <listViews>
        <fullName>Adventures_2017</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.Adventure</value>
        </filters>
        <filters>
            <field>CAMPAIGN.START_DATE</field>
            <operation>greaterThan</operation>
            <value>1/1/2017</value>
        </filters>
        <label>Adventures 2017</label>
    </listViews>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Fundraising_Active_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.Fundraising</value>
        </filters>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Fundraising Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>GW_Volunteers__Volunteer_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>GW_Volunteers__Number_of_Volunteers__c</columns>
        <columns>GW_Volunteers__Volunteer_Completed_Hours__c</columns>
        <columns>GW_Volunteers__Volunteer_Jobs__c</columns>
        <columns>GW_Volunteers__Volunteers_Still_Needed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.Benevon</value>
        </filters>
        <label>Benevon Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <recordTypes>
        <fullName>Adventure</fullName>
        <active>true</active>
        <description>Outdoor Recreation Activities</description>
        <label>Adventure</label>
    </recordTypes>
    <recordTypes>
        <fullName>Benevon</fullName>
        <active>true</active>
        <description>Used for Benevon Activities</description>
        <label>Benevon</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fundraising</fullName>
        <active>true</active>
        <description>Any fundraising activity (emails, advertisement, outreach, etc)</description>
        <label>Fundraising</label>
    </recordTypes>
    <recordTypes>
        <fullName>GW_Volunteers__Volunteers_Campaign</fullName>
        <active>true</active>
        <description>A campaign specifically used to track Volunteers</description>
        <label>Volunteer Campaign</label>
    </recordTypes>
    <sharingModel>FullAccess</sharingModel>
</CustomObject>